--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -91,7 +91,7 @@ a {
 .nav__data {
   height: 100%;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
 }
 
@@ -528,6 +528,19 @@ h2{
 .boxday {
   width: 450px;
   height: 1060px;
+  border-radius: 10px;
+  box-shadow: 2px 10px 12px rgba(0, 0, 0, 0.5);
+  display: flex;
+  flex-direction: column;
+  box-sizing: border-box;
+  margin: 100px 0px;
+  justify-content: center;
+  padding: 2rem;
+}
+
+.boxday2 {
+  width: 450px;
+  height: 1300px;
   border-radius: 10px;
   box-shadow: 2px 10px 12px rgba(0, 0, 0, 0.5);
   display: flex;
