--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -525,6 +525,7 @@ h2{
   padding: 2rem;
 }
 
+/*--BOX 3D2N--*/
 .boxday {
   width: 450px;
   height: 1060px;
@@ -538,7 +539,48 @@ h2{
   padding: 2rem;
 }
 
+/*--BOX 4D3N--*/
 .boxday2 {
+  width: 450px;
+  height: 1300px;
+  border-radius: 10px;
+  box-shadow: 2px 10px 12px rgba(0, 0, 0, 0.5);
+  display: flex;
+  flex-direction: column;
+  box-sizing: border-box;
+  margin: 100px 0px;
+  justify-content: center;
+  padding: 2rem;
+}
+
+/*--BOX 5D4N--*/
+.boxday3 {
+  width: 450px;
+  height: 1500px;
+  border-radius: 10px;
+  box-shadow: 2px 10px 12px rgba(0, 0, 0, 0.5);
+  display: flex;
+  flex-direction: column;
+  box-sizing: border-box;
+  margin: 100px 0px;
+  justify-content: center;
+  padding: 2rem;
+}
+
+/*--BOX 6D5N--*/
+.boxday4 {
+  width: 450px;
+  height: 1700px;
+  border-radius: 10px;
+  box-shadow: 2px 10px 12px rgba(0, 0, 0, 0.5);
+  display: flex;
+  flex-direction: column;
+  box-sizing: border-box;
+  margin: 100px 0px;
+  justify-content: center;
+  padding: 2rem;
+}
+.boxpckg1 {
   width: 450px;
   height: 1300px;
   border-radius: 10px;
