--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -418,6 +418,8 @@ button {
   font-weight: bold;
   color: #fff;
   font-family: var(--body-color);
+  margin-bottom: auto;
+  margin-top: -2rem;
 }
 
 .title {
@@ -429,7 +431,20 @@ button {
 
 .box {
   width: 450px;
-  height: 760px;
+  height: 600px;
+  border-radius: 10px;
+  box-shadow: 2px 10px 12px rgba(0, 0, 0, 0.5);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  box-sizing: border-box;
+  margin: 100px 0px;
+}
+/*---CAR STANDAR---*/
+.boxstd {
+  width: 450px;
+  height: 500px;
   border-radius: 10px;
   box-shadow: 2px 10px 12px rgba(0, 0, 0, 0.5);
   display: flex;
@@ -453,7 +468,6 @@ button {
   align-items: let;
   width: 350px;
   margin: 40px;
-  
 }
 
 .details p{
@@ -592,9 +606,59 @@ h2{
   justify-content: center;
   padding: 2rem;
 }
+/*--OTHER TRIP--*/
+.boxpckg2 {
+  width: 450px;
+  height: 2300px;
+  border-radius: 10px;
+  box-shadow: 2px 10px 12px rgba(0, 0, 0, 0.5);
+  display: flex;
+  flex-direction: column;
+  box-sizing: border-box;
+  margin: 100px 0px;
+  justify-content: center;
+  padding: 2rem;
+}
+/*----------------*/
+
+/*--PENIDA TRIP REGULER--*/
+.boxpckg3 {
+  width: 450px;
+  height: 850px;
+  border-radius: 10px;
+  box-shadow: 2px 10px 12px rgba(0, 0, 0, 0.5);
+  display: flex;
+  flex-direction: column;
+  box-sizing: border-box;
+  margin: 100px 0px;
+  justify-content: center;
+  padding: 2rem;
+}
+/*----------------*/
+/*--PENIDA TRIP LUXURY--*/
+.boxpckg4 {
+  width: 450px;
+  height: 950px;
+  border-radius: 10px;
+  box-shadow: 2px 10px 12px rgba(0, 0, 0, 0.5);
+  display: flex;
+  flex-direction: column;
+  box-sizing: border-box;
+  margin: 100px 0px;
+  justify-content: center;
+  padding: 2rem;
+}
+/*----------------*/
+
 
 .infopckg{
   text-align: left;
+  font-size: large;
+  margin-bottom: -1.5rem;
+}
+.infopckgpenida,
+.infopckgother{
+  text-align: center;
   font-size: large;
   margin-bottom: -1.5rem;
 }
