--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -419,7 +419,6 @@ button {
   color: #fff;
   font-family: var(--body-color);
   margin-bottom: auto;
-  margin-top: -2rem;
 }
 
 .title {
@@ -465,7 +464,7 @@ button {
 .details1{
   display: flex;
   flex-direction: column;
-  align-items: let;
+  align-items: left;
   width: 350px;
   margin: 40px;
 }
@@ -609,7 +608,7 @@ h2{
 /*--OTHER TRIP--*/
 .boxpckg2 {
   width: 450px;
-  height: 2300px;
+  height: 500px;
   border-radius: 10px;
   box-shadow: 2px 10px 12px rgba(0, 0, 0, 0.5);
   display: flex;
@@ -669,4 +668,14 @@ h2{
 
 .tittlepckg{
   margin-bottom: -3rem;
+}
+
+.photopckg{
+  display: flex;
+  flex-direction: column;
+  box-sizing: border-box;
+  margin: 100px 0px;
+  justify-content: center;
+  width: 450px;
+  
 }
