--- a/assets/css/gallery.css
+++ b/assets/css/gallery.css
@@ -1,51 +1,42 @@
 * {
+    padding:  0;
     margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+    font-family: sans-serif;
 }
 
-html, body {
-    background: #fff;
-    padding: 10px;
+.container {
+    max-width: 1224px;
+    width: 90%;
+    margin: auto;
+    padding: 40px 0;
 }
 
-img {
-    max-width: 100%;
-    height: auto;
-    vertical-align: middle;
-    display: inline-block;
+.title {
+    margin-bottom: 2rem;
+    text-align: center;
+    font-size: xx-large;
 }
 
-.grid-wrapper > div {
+.photo-gallery {
     display: flex;
-    justify-content: center;
-    align-items: center;
+    gap: 20px;
 }
 
-.grid-wrapper >div > img {
+.column {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.photo img {
     width: 100%;
     height: 100%;
-    object-fit: cover;
     border-radius: 5px;
+    object-fit: cover;
 }
 
-.grid-wrapper {
-    display: grid;
-    grid-gap: 10px;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    grid-auto-rows: 300px;
-    grid-auto-flow: dense;
-}
-
-.grid-wrapper .wide {
-    grid-column: span 2;
-}
-
-.grid-wrapper .tall {
-    grid-row: span 2;
-}
-
-.grid-wrapper .big {
-    grid-column: span 2;
-    grid-row: span 2;
+@media(max-width:768px){
+    .photo-gallery{
+        flex-direction: column;
+    }
 }
